--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build web app
         run: npm run build
 
+      - name: Sync Capacitor
+        run: npx cap sync android
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
